entrega terminada, 2 relativa y 3 normales

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,16 +28,19 @@
         </div> 
     </nav>
 </nav>
-    <h1 class="texto">
-        Numero de Contacto
-    </h1>
-    <h2>
-        Tel: +54123456789
-    </h2>
-    <h2>Facebook: Restaurante Patagonico</h2>
-    <h2>Direccion:</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6009.73957824282!2d-71.30368923744149!3d-41.13736840456859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smoreno%20569!5e0!3m2!1ses!2sar!4v1711954177473!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-
+<div>
+    <div class="row">
+        <h1 class="texto">
+            Numero de Contacto
+        </h1>
+        <h2>
+            Tel: +54123456789
+        </h2>
+        <h2>Facebook: Restaurante Patagonico</h2>
+        <h2>Direccion:</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6009.73957824282!2d-71.30368923744149!3d-41.13736840456859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smoreno%20569!5e0!3m2!1ses!2sar!4v1711954177473!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+    </div>
+</div>
 
 
 
