--- a/pages/quien.html
+++ b/pages/quien.html
@@ -5,37 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/archivos.css">
+    <link rel="stylesheet" href="../archivos.css">
     <title>¿Quienes somos?</title>
 </head>
 <body>
-    <nav class="barra navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
-            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
-                aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse" id="navbar-start">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-        </div> 
-    </nav>
+  <nav class="barra navbar navbar-expand-lg fixed-top">
+    <div class="container">
+        <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
+            aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbar-start">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+    </div> 
+</nav>
     <div>
-        <p class="textop">
-            En nuestro restaurante patagónico, nos enorgullece presentarnos como guardianes de la auténtica cocina de la Patagonia. Con una pasión inquebrantable por los sabores locales y un profundo respeto por la tierra que nos rodea, nos esforzamos por ofrecer una experiencia gastronómica que celebra la rica herencia culinaria de esta región única. Nuestro equipo está formado por chefs expertos que dominan el arte de transformar los ingredientes más frescos y naturales en platos que sorprenden y deleitan a nuestros comensales. 
-        </p>
-        <img src="../media/ai-generated-8600463_1280.jpg" alt="cocina" class="imagen1">
-        <p class="textop">
-            Cada día nos esforzamos por superar las expectativas, brindando un servicio cálido y personalizado en un ambiente acogedor que refleja la calidez y la hospitalidad de la Patagonia. En resumen, somos mucho más que un restaurante; somos una ventana a la esencia misma de la Patagonia, donde cada visita es una oportunidad para explorar y saborear lo mejor de esta maravillosa región.
-        </p>
+        <main class="row quien">
+            <div class="burbuja col-sm-1 ">
+                <h1>¿Quienes somos?</h1>
+                <p>En nuestro restaurante patagónico, nos enorgullece presentarnos como guardianes de la auténtica cocina de la Patagonia. Con una pasión inquebrantable por los sabores locales y un profundo respeto por la tierra que nos rodea, nos esforzamos por ofrecer una experiencia gastronómica que celebra la rica herencia culinaria de esta región única. Nuestro equipo está formado por chefs expertos que dominan el arte de transformar los ingredientes más frescos y naturales en platos que sorprenden y deleitan a nuestros comensales. .</p>
+            </div>
+        </main>
     </div>
+    <h2 class= container-fluid>Nuestro Lugar</h2>
+    <section class="container ">
+        <div class="nuestro row">
+            <div class="imagenleft col-12 col-md-6 col-lg-6"></div>
+            <div class="restaright col-12 col-md-6 col-lg-6">
+                <p class="text-center"><span>Cada día nos esforzamos por superar las expectativas, brindando un servicio cálido y personalizado en un ambiente acogedor que refleja la calidez y la hospitalidad de la Patagonia. En resumen, somos mucho más que un restaurante; somos una ventana a la esencia misma de la Patagonia, donde cada visita es una oportunidad para explorar y saborear lo mejor de esta maravillosa región.</span>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Todos los derechos reservador por copyright.</p>
+        <p>El sitio fue desarrollado por Matias Gonzalez</p>
+    </footer>
+
 
 
 
